Color contrast fixes for accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,12 +27,12 @@ a {
 }
 
 a:focus {
-  /*color: 3px solid #3397db;*/
-  outline: auto 10px #d30aee;
+  color: 3px solid #3397db;
+  outline: auto 10px #44fd0c;
 	
 }
 a:hover {
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a img{
@@ -53,6 +53,10 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   left: -1000px;
   background-color: white;
   padding: 10px;
+}
+
+.skip-link a {
+  color: #0275d8;
 }
 
 .skip-link:focus {
@@ -94,6 +98,8 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+  text-decoration: none;
+
 }
 #breadcrumb {
     padding: 10px 40px 16px;
@@ -137,7 +143,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 100%;
-  background-color: #3397DB;
+  background-color: #1F3A93;
   align-items: center;
   padding: 0.5em 0;
 }
@@ -188,7 +194,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #1F3A93;
   font-family: Arial,sans-serif;
   font-size: 1em;
   font-weight: 200;
@@ -202,7 +208,7 @@ nav h1 a {
   font-size: 1em;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #1F3A93;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -249,7 +255,7 @@ nav h1 a {
 }
 */
 #restaurant-name {
-  color: #f18200;
+  color: #1F3A93;
   font-family: Arial,sans-serif;
   font-size: 2em;
   font-weight: 200;
@@ -291,7 +297,7 @@ nav h1 a {
   padding: 30px 40px 80px;
 }*/
 #reviews-container h2 {
-  color: #f58500;
+  color: #1F3A93;
   font-size: 1.5em;
   font-weight: 300;
   letter-spacing: -1px;
